crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/026.cypher
MATCH (n) RETURN count(n); MATCH (m:Privileged) RETURN m
